manifests/netbox/30-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbox
  namespace: netbox
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netbox.jmarcelocarvalho.com`)
      kind: Rule
      services:
        - name: netbox
          port: 80
  tls:
    secretName: netbox-tls
